fix and start insert comment

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 body{
+    font-family: 'Merriweather', serif;
+    font-size: small;
     background-image: url(https://wallpaperaccess.com/full/1686771.jpg);
     background-position: center;
     background-repeat: no-repeat;
